Fixed gap of datetime-local and date on Chromium

--- a/src/elements/input.datetime.css
+++ b/src/elements/input.datetime.css
@@ -57,6 +57,7 @@ input[type=date]::-webkit-calendar-picker-indicator,
 input[type=time]::-webkit-calendar-picker-indicator {
 	width: var(--icon-size);
 	height: var(--icon-size);
+	margin: 0 0 0 var(--horizontal-padding);
 	padding: 0;
 	cursor: pointer;
 }
